For dark mode when button was hovered it jumped because it created border. Fixed it.

--- a/src/components/Atoms/RectangleButton/RectangleButton.module.css
+++ b/src/components/Atoms/RectangleButton/RectangleButton.module.css
@@ -1,4 +1,5 @@
 .RectangleButton {
+  border: 1px solid transparent;
   border-radius: 6px;
   color: var(--main-color);
 }
